src/zenoh_dart.h

// ---------------------------------------------------------------------------
// Bytes
// ---------------------------------------------------------------------------

/// Returns the size of z_owned_bytes_t in bytes.
///
/// Used by Dart to allocate the correct amount of native memory
/// for opaque zenoh types.
FFI_PLUGIN_EXPORT size_t zd_bytes_sizeof(void);
/// Copies a buffer into owned bytes.
///
/// @param bytes  Pointer to an uninitialized z_owned_bytes_t.
/// @param data   Pointer to the buffer data.
/// @param len    Length of the buffer in bytes.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_bytes_copy_from_buf(z_owned_bytes_t* bytes,
                                             const uint8_t* data, size_t len);
/// Obtains a const loaned reference to the bytes.
///
/// @param bytes  Pointer to a valid z_owned_bytes_t.
/// @return Const pointer to the loaned bytes.
FFI_PLUGIN_EXPORT const z_loaned_bytes_t* zd_bytes_loan(
    const z_owned_bytes_t* bytes);
/// Returns the total number of bytes in the payload.
///
/// FULL-WIDTH: `size_t`, matching canon's `z_bytes_len`. It was `int32_t`,
/// which is a lossy narrowing of the contract's domain -- a payload in
/// [2^31, 2^32) came back negative and one at or above 2^32 came back
/// silently short. The callback receive legs were full-width all along; this
/// is the sync extractor catching up.
///
/// @param bytes  Pointer to a z_owned_bytes_t (cast to uint8_t*).
/// @return Total number of bytes.
FFI_PLUGIN_EXPORT size_t zd_bytes_len(const uint8_t* bytes);
/// Reads the content of owned bytes into a caller-provided buffer.
///
/// Uses z_bytes_reader to copy up to `capacity` bytes into `out`.
///
/// @param bytes     Pointer to a z_owned_bytes_t (cast to uint8_t*).
/// @param out       Pointer to a buffer to receive the data.
/// @param capacity  Maximum number of bytes to read (full-width `size_t`,
///                  matching zd_bytes_len's return).
/// @return 0 on success.
FFI_PLUGIN_EXPORT int8_t zd_bytes_to_buf(const uint8_t* bytes,
                                          uint8_t* out, size_t capacity);
/// Drops (frees) owned bytes.
///
/// After this call the owned bytes are in gravestone state.
/// A second drop is a safe no-op.
///
/// @param bytes  Pointer to a z_owned_bytes_t to drop.
FFI_PLUGIN_EXPORT void zd_bytes_drop(z_owned_bytes_t* bytes);
/// Converts a mutable SHM buffer into owned bytes (consuming the buffer).
///
/// @param bytes  Pointer to an uninitialized z_owned_bytes_t.
/// @param buf    Pointer to a z_owned_shm_mut_t (consumed).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_bytes_from_shm_mut(z_owned_bytes_t* bytes,
                                            z_owned_shm_mut_t* buf);
/// Checks whether owned bytes are backed by shared memory.
///
/// Uses z_bytes_as_loaned_shm() to probe the bytes. If the call succeeds
/// (returns 0), the bytes are SHM-backed.
///
/// @param bytes  Pointer to a z_owned_bytes_t (cast to uint8_t*).
/// @return 1 if SHM-backed, 0 otherwise.
FFI_PLUGIN_EXPORT int8_t zd_bytes_is_shm(const uint8_t* bytes);
// ---------------------------------------------------------------------------
// Bytes Writer
// ---------------------------------------------------------------------------

/// Returns the size of z_owned_bytes_writer_t in bytes.
FFI_PLUGIN_EXPORT size_t zd_bytes_writer_sizeof(void);
/// Creates an empty bytes writer.
FFI_PLUGIN_EXPORT int8_t zd_bytes_writer_empty(z_owned_bytes_writer_t* writer);
/// Obtains a mutable loan of the writer.
FFI_PLUGIN_EXPORT void zd_bytes_writer_loan_mut(
    z_owned_bytes_writer_t* writer, z_loaned_bytes_writer_t** out);
/// Writes all bytes from src into the writer.
FFI_PLUGIN_EXPORT int8_t zd_bytes_writer_write_all(
    z_loaned_bytes_writer_t* writer, const uint8_t* data, size_t len);
/// Appends owned bytes into the writer. Consumes the bytes.
FFI_PLUGIN_EXPORT int8_t zd_bytes_writer_append(
    z_loaned_bytes_writer_t* writer, z_owned_bytes_t* bytes);
/// Finishes the writer and produces owned bytes.
FFI_PLUGIN_EXPORT void zd_bytes_writer_finish(
    z_owned_bytes_writer_t* writer, z_owned_bytes_t* out);
/// Drops the writer without finishing.
FFI_PLUGIN_EXPORT void zd_bytes_writer_drop(z_owned_bytes_writer_t* writer);
// ---------------------------------------------------------------------------
// Bytes Slice Iterator
// ---------------------------------------------------------------------------

/// Returns the size of z_bytes_slice_iterator_t in bytes.
FFI_PLUGIN_EXPORT size_t zd_bytes_slice_iterator_sizeof(void);
/// Creates a slice iterator from loaned bytes and copies it to *iter.
///
/// @param bytes  Const pointer to loaned bytes.
/// @param iter   Pointer to caller-allocated z_bytes_slice_iterator_t.
FFI_PLUGIN_EXPORT void zd_bytes_get_slice_iterator(
    const z_loaned_bytes_t* bytes, z_bytes_slice_iterator_t* iter);
/// Advances the slice iterator.
///
/// @param iter  Pointer to a z_bytes_slice_iterator_t.
/// @param out   Pointer to a z_view_slice_t to receive the next slice.
/// @return true if a slice was written to out, false if iteration is done.
FFI_PLUGIN_EXPORT bool zd_bytes_slice_iterator_next(
    z_bytes_slice_iterator_t* iter, z_view_slice_t* out);