package/lib/src/bindings.dart


  late final _zd_bytes_copy_from_bufPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('zd_bytes_copy_from_buf');
  late final _zd_bytes_copy_from_buf = _zd_bytes_copy_from_bufPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Uint8>, int)
      >();

  /// Drops (frees) owned bytes.
  ///
  /// After this call the owned bytes are in gravestone state.
  /// A second drop is a safe no-op.
  ///
  /// @param bytes  Pointer to a z_owned_bytes_t to drop.
  void zd_bytes_drop(
    ffi.Pointer<ffi.Opaque> bytes,
  ) {
    return _zd_bytes_drop(
      bytes,
    );
  }

  late final _zd_bytes_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_bytes_drop',
      );
  late final _zd_bytes_drop = _zd_bytes_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Opaque>)>();

  /// Converts a mutable SHM buffer into owned bytes (consuming the buffer).
  ///
  /// @param bytes  Pointer to an uninitialized z_owned_bytes_t.
  /// @param buf    Pointer to a z_owned_shm_mut_t (consumed).
  /// @return 0 on success, negative on failure.
  int zd_bytes_from_shm_mut(
    ffi.Pointer<ffi.Opaque> bytes,
    ffi.Pointer<ffi.Opaque> buf,
  ) {
    return _zd_bytes_from_shm_mut(
      bytes,
      buf,
    );
  }

  late final _zd_bytes_from_shm_mutPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
        >
      >('zd_bytes_from_shm_mut');
  late final _zd_bytes_from_shm_mut = _zd_bytes_from_shm_mutPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
      >();

  /// Creates a slice iterator from loaned bytes and copies it to *iter.
  ///
  /// @param bytes  Const pointer to loaned bytes.
  /// @param iter   Pointer to caller-allocated z_bytes_slice_iterator_t.
  void zd_bytes_get_slice_iterator(
    ffi.Pointer<ffi.Opaque> bytes,
    ffi.Pointer<z_bytes_slice_iterator_t> iter,
  ) {
    return _zd_bytes_get_slice_iterator(
      bytes,
      iter,
    );
  }

  late final _zd_bytes_get_slice_iteratorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<z_bytes_slice_iterator_t>,
          )
        >
      >('zd_bytes_get_slice_iterator');
  late final _zd_bytes_get_slice_iterator = _zd_bytes_get_slice_iteratorPtr
      .asFunction<
        void Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<z_bytes_slice_iterator_t>,
        )
      >();

  /// Checks whether owned bytes are backed by shared memory.
  ///
  /// Uses z_bytes_as_loaned_shm() to probe the bytes. If the call succeeds
  /// (returns 0), the bytes are SHM-backed.
  ///
  /// @param bytes  Pointer to a z_owned_bytes_t (cast to uint8_t*).
  /// @return 1 if SHM-backed, 0 otherwise.
  int zd_bytes_is_shm(
    ffi.Pointer<ffi.Uint8> bytes,
  ) {
    return _zd_bytes_is_shm(
      bytes,
    );
  }

  late final _zd_bytes_is_shmPtr =
      _lookup<ffi.NativeFunction<ffi.Int8 Function(ffi.Pointer<ffi.Uint8>)>>(
        'zd_bytes_is_shm',
      );
  late final _zd_bytes_is_shm = _zd_bytes_is_shmPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>)>();

  /// Returns the total number of bytes in the payload.
  ///
  /// FULL-WIDTH: `size_t`, matching canon's `z_bytes_len`. It was `int32_t`,
  /// which is a lossy narrowing of the contract's domain -- a payload in
  /// [2^31, 2^32) came back negative and one at or above 2^32 came back
  /// silently short. The callback receive legs were full-width all along; this
  /// is the sync extractor catching up.
  ///
  /// @param bytes  Pointer to a z_owned_bytes_t (cast to uint8_t*).
  /// @return Total number of bytes.
  int zd_bytes_len(
    ffi.Pointer<ffi.Uint8> bytes,
  ) {
    return _zd_bytes_len(
      bytes,
    );
  }

  late final _zd_bytes_lenPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Uint8>)>>(
        'zd_bytes_len',
      );
  late final _zd_bytes_len = _zd_bytes_lenPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>)>();

  /// Obtains a const loaned reference to the bytes.
  ///
  /// @param bytes  Pointer to a valid z_owned_bytes_t.
  /// @return Const pointer to the loaned bytes.
  ffi.Pointer<ffi.Opaque> zd_bytes_loan(
    ffi.Pointer<ffi.Opaque> bytes,
  ) {
    return _zd_bytes_loan(
      bytes,
    );
  }

  late final _zd_bytes_loanPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_bytes_loan');
  late final _zd_bytes_loan = _zd_bytes_loanPtr
      .asFunction<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns the size of z_owned_bytes_t in bytes.
  ///
  /// Used by Dart to allocate the correct amount of native memory
  /// for opaque zenoh types.
  int zd_bytes_sizeof() {
    return _zd_bytes_sizeof();
  }

  late final _zd_bytes_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>('zd_bytes_sizeof');
  late final _zd_bytes_sizeof = _zd_bytes_sizeofPtr
      .asFunction<int Function()>();

  /// Advances the slice iterator.
  ///
  /// @param iter  Pointer to a z_bytes_slice_iterator_t.
  /// @param out   Pointer to a z_view_slice_t to receive the next slice.
  /// @return true if a slice was written to out, false if iteration is done.
  bool zd_bytes_slice_iterator_next(
    ffi.Pointer<z_bytes_slice_iterator_t> iter,
    ffi.Pointer<z_view_slice_t> out,
  ) {
    return _zd_bytes_slice_iterator_next(
      iter,
      out,
    );
  }

  late final _zd_bytes_slice_iterator_nextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Pointer<z_bytes_slice_iterator_t>,
            ffi.Pointer<z_view_slice_t>,
          )
        >
      >('zd_bytes_slice_iterator_next');
  late final _zd_bytes_slice_iterator_next = _zd_bytes_slice_iterator_nextPtr
      .asFunction<
        bool Function(
          ffi.Pointer<z_bytes_slice_iterator_t>,
          ffi.Pointer<z_view_slice_t>,
        )
      >();

  /// Returns the size of z_bytes_slice_iterator_t in bytes.
  int zd_bytes_slice_iterator_sizeof() {
    return _zd_bytes_slice_iterator_sizeof();
  }

  late final _zd_bytes_slice_iterator_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
        'zd_bytes_slice_iterator_sizeof',
      );
  late final _zd_bytes_slice_iterator_sizeof =
      _zd_bytes_slice_iterator_sizeofPtr.asFunction<int Function()>();

  /// Reads the content of owned bytes into a caller-provided buffer.
  ///
  /// Uses z_bytes_reader to copy up to `capacity` bytes into `out`.
  ///
  /// @param bytes     Pointer to a z_owned_bytes_t (cast to uint8_t*).
  /// @param out       Pointer to a buffer to receive the data.
  /// @param capacity  Maximum number of bytes to read (full-width `size_t`,
  /// matching zd_bytes_len's return).
  /// @return 0 on success.
  int zd_bytes_to_buf(
    ffi.Pointer<ffi.Uint8> bytes,
    ffi.Pointer<ffi.Uint8> out,
    int capacity,
  ) {
    return _zd_bytes_to_buf(
      bytes,
      out,
      capacity,
    );
  }

  late final _zd_bytes_to_bufPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('zd_bytes_to_buf');
  late final _zd_bytes_to_buf = _zd_bytes_to_bufPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>, int)
      >();

  /// Appends owned bytes into the writer. Consumes the bytes.
  int zd_bytes_writer_append(
    ffi.Pointer<z_loaned_bytes_writer_t> writer,
    ffi.Pointer<ffi.Opaque> bytes,
  ) {
    return _zd_bytes_writer_append(
      writer,
      bytes,
    );
  }

  late final _zd_bytes_writer_appendPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<z_loaned_bytes_writer_t>,
            ffi.Pointer<ffi.Opaque>,
          )
        >
      >('zd_bytes_writer_append');
  late final _zd_bytes_writer_append = _zd_bytes_writer_appendPtr
      .asFunction<
        int Function(
          ffi.Pointer<z_loaned_bytes_writer_t>,
          ffi.Pointer<ffi.Opaque>,
        )
      >();

  /// Drops the writer without finishing.
  void zd_bytes_writer_drop(
    ffi.Pointer<z_owned_bytes_writer_t> writer,
  ) {
    return _zd_bytes_writer_drop(
      writer,
    );
  }

  late final _zd_bytes_writer_dropPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<z_owned_bytes_writer_t>)
        >
      >('zd_bytes_writer_drop');
  late final _zd_bytes_writer_drop = _zd_bytes_writer_dropPtr
      .asFunction<void Function(ffi.Pointer<z_owned_bytes_writer_t>)>();

  /// Creates an empty bytes writer.
  int zd_bytes_writer_empty(
    ffi.Pointer<z_owned_bytes_writer_t> writer,
  ) {
    return _zd_bytes_writer_empty(
      writer,
    );
  }

  late final _zd_bytes_writer_emptyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<z_owned_bytes_writer_t>)
        >
      >('zd_bytes_writer_empty');
  late final _zd_bytes_writer_empty = _zd_bytes_writer_emptyPtr
      .asFunction<int Function(ffi.Pointer<z_owned_bytes_writer_t>)>();

  /// Finishes the writer and produces owned bytes.
  void zd_bytes_writer_finish(
    ffi.Pointer<z_owned_bytes_writer_t> writer,
    ffi.Pointer<ffi.Opaque> out,
  ) {
    return _zd_bytes_writer_finish(
      writer,
      out,
    );
  }

  late final _zd_bytes_writer_finishPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<z_owned_bytes_writer_t>,
            ffi.Pointer<ffi.Opaque>,
          )
        >
      >('zd_bytes_writer_finish');
  late final _zd_bytes_writer_finish = _zd_bytes_writer_finishPtr
      .asFunction<
        void Function(
          ffi.Pointer<z_owned_bytes_writer_t>,
          ffi.Pointer<ffi.Opaque>,
        )
      >();

  /// Obtains a mutable loan of the writer.
  void zd_bytes_writer_loan_mut(
    ffi.Pointer<z_owned_bytes_writer_t> writer,
    ffi.Pointer<ffi.Pointer<z_loaned_bytes_writer_t>> out,
  ) {
    return _zd_bytes_writer_loan_mut(
      writer,
      out,
    );
  }

  late final _zd_bytes_writer_loan_mutPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<z_owned_bytes_writer_t>,
            ffi.Pointer<ffi.Pointer<z_loaned_bytes_writer_t>>,
          )
        >
      >('zd_bytes_writer_loan_mut');
  late final _zd_bytes_writer_loan_mut = _zd_bytes_writer_loan_mutPtr
      .asFunction<
        void Function(
          ffi.Pointer<z_owned_bytes_writer_t>,
          ffi.Pointer<ffi.Pointer<z_loaned_bytes_writer_t>>,
        )
      >();

  /// Returns the size of z_owned_bytes_writer_t in bytes.
  int zd_bytes_writer_sizeof() {
    return _zd_bytes_writer_sizeof();
  }

  late final _zd_bytes_writer_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
        'zd_bytes_writer_sizeof',
      );
  late final _zd_bytes_writer_sizeof = _zd_bytes_writer_sizeofPtr
      .asFunction<int Function()>();

  /// Writes all bytes from src into the writer.
  int zd_bytes_writer_write_all(
    ffi.Pointer<z_loaned_bytes_writer_t> writer,
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _zd_bytes_writer_write_all(
      writer,
      data,
      len,
    );
  }
